--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="Engine\Systems\Rendering\OpaqueRenderSystem.cpp" />
     <ClCompile Include="Engine\Systems\Rendering\LightRenderSystem.cpp" />
     <ClCompile Include="Engine\Systems\Rendering\PostRenderSystem.cpp" />
+    <ClCompile Include="Engine\Systems\HardwareInitSystem.cpp" />
     <ClCompile Include="vendor\Delegates.cpp" />
     <ClCompile Include="vendor\ImGuizmo\GraphEditor.cpp" />
     <ClCompile Include="vendor\ImGuizmo\ImCurveEdit.cpp" />
@@ -191,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
+    <ClInclude Include="Engine\Systems\EngineContext.h" />
     <ClInclude Include="Engine\Systems\Rendering\EditorBillboardRenderSystem.h" />
     <ClInclude Include="Engine\Core\IService.h" />
     <ClInclude Include="Engine\Systems\EditorBillboardSystem.h" />
@@ -244,6 +246,8 @@
     <ClInclude Include="Engine\Systems\Rendering\LightRenderSystem.h" />
     <ClInclude Include="Engine\Systems\Rendering\PostRenderSystem.h" />
     <ClInclude Include="Engine\Systems\Rendering\RenderHelper.h" />
+    <ClInclude Include="Engine\Systems\HardwareInitSystem.h" />
+    <ClInclude Include="Engine\Systems\HardwareContext.h" />
     <ClInclude Include="vendor\Delegates.h" />
     <ClInclude Include="vendor\entt\entt.hpp" />
     <ClInclude Include="vendor\ImGuizmo\GraphEditor.h" />
