--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/assimp/assimp.git
 [submodule "GameEngine/vendor/PhysX"]
 	path = GameEngine/vendor/PhysX
-	url = https://github.com/Libertus-Lab/PhysX-5.1.git
+	url = https://github.com/NVIDIA-Omniverse/PhysX.git
