--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -445,6 +445,9 @@
     <None Include="Engine\Assets\Shaders\SpriteBillboardShader.hlsl" />
     <None Include="Engine\Assets\Shaders\ShadowMapGenerator.hlsl" />
     <None Include="Engine\Assets\Shaders\Skybox.hlsl" />
+    <None Include="Engine\Assets\Shaders\ShadowPointlightShader.hlsl" />
+    <None Include="Engine\Assets\Shaders\ShadowPointLightGenerator.hlsl" />
+    <None Include="Engine\Assets\Shaders\ShadowFinal.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine\Assets\SkyBox\skybox_1.png">
