--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=928,0
-Size=352,450
+Pos=1125,0
+Size=155,450
 Collapsed=0
 DockId=0x00000005,0
 
@@ -14,22 +14,22 @@ Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=191,0
-Size=735,450
+Pos=455,0
+Size=668,450
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=189,450
+Size=453,450
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][Example: Custom rendering]
-ViewportPos=348,374
-ViewportId=0x3AC84485
-Size=485,414
+Pos=0,376
+Size=453,371
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -66,6 +66,21 @@ Collapsed=0
 [Window][Hello, world!]
 Pos=57,139
 Size=339,180
+Collapsed=0
+
+[Window][Example: Log]
+Pos=64,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=222,379
+Size=430,450
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -145,14 +160,20 @@ Column 4  Width=112
 Column 5  Width=112
 Column 6  Width=112
 
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=Y
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,747 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1566,720 Split=X
-      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=189,720 Selected=0x29EABFBD
-      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=1375,720 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=352,720 Selected=0xE87781F4
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,268 Split=X Selected=0xBF096F38
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=523,358 Selected=0x199AB496
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1395,358 Selected=0xBF096F38
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=367,330 Size=1280,720 Split=Y
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,747 Split=X
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1123,720 Split=X
+      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=453,720 Split=Y Selected=0x29EABFBD
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=189,374 Selected=0x29EABFBD
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=189,371 Selected=0xE1FDE0B9
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=668,720 CentralNode=1 Selected=0x13926F0B
+    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=155,720 Selected=0xE87781F4
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,268 Split=X Selected=0xBF096F38
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=523,358 Selected=0x199AB496
+    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=1395,358 Selected=0xBF096F38
 
